updated > and < to conform

--- a/public/pages/node_forms/greater_than_form.html
+++ b/public/pages/node_forms/greater_than_form.html
@@ -3,7 +3,7 @@
 <div layout="row">
   <md-text-float flex-sm="33" label="Left" ng-model="flowNode.left"> </md-text-float>
   <h4 flex-sm="33" class="md-default-theme">
-    <i class="fa fa-4x fa-angle-right"></i>
+    <i style="font-size: 2.5em; padding: 10px;">&gt;</i>
   </h4>
   <md-text-float flex-sm="33" label="Right" ng-model="flowNode.right"> </md-text-float>
 </div>
