--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -46,20 +46,14 @@
       </div>
 
       <div flex layout="row" layout-align="center">
-
-        <md-button ng-click="center()">
-          <md-tooltip>Center</md-tooltip>
-          <i class="fa fa-crosshairs"></i>
+        <md-button ng-click="undoEdit()" ng-disabled="!undoable()">
+          <md-tooltip>Undo</md-tooltip>
+          <i class="fa fa-reply fa-lg"></i>
         </md-button>
 
-        <md-button ng-click="zoomOut()" w-mousetrap="{'-' : zoomOut, '_' : zoomOut}">
-          <md-tooltip>Zoom Out</md-tooltip>
-          <i class="fa fa-minus"></i>
-        </md-button>
-
-        <md-button ng-click="zoomIn()" w-mousetrap="{'+' : zoomIn, '=' : zoomIn}">
-          <md-tooltip>Zoom In</md-tooltip>
-          <i class="fa fa-plus"></i>
+        <md-button ng-click="redoEdit()" ng-disabled="!redoable()">
+          <md-tooltip>Redo</md-tooltip>
+          <i class="fa fa-mail-forward fa-lg"></i>
         </md-button>
       </div>
 
@@ -81,7 +75,20 @@
     <flow-editor flow="activeFlow"></flow-editor>
   </div>
 
-  <div class="zoom-controls" ng-class="{'browser-maximized' : activeFlow.browserMaximized}"></div>
+  <div class="zoom-controls" flex layout="column" ng-class="{'browser-maximized' : activeFlow.browserMaximized}">
+        <button class="btn btn-default btn-sm" ng-click="center()">
+          <i class="fa fa-crosshairs fa-lg"></i>
+        </button>
+        <md-divider></md-divider>
+
+        <button class="btn btn-default btn-sm" ng-click="zoomIn()" w-mousetrap="{'+' : zoomIn, '=' : zoomIn}">
+          <i class="fa fa-plus fa-lg"></i>
+        </button>
+
+        <button class="btn btn-default btn-sm" ng-click="zoomOut()" w-mousetrap="{'-' : zoomOut, '_' : zoomOut}">
+          <i class="fa fa-minus fa-lg"></i>
+        </button>
+  </div>
   <flow-browser flex debug-lines="debugLines" node-types="nodeTypes" flow-node-types="flowNodeTypes" active-flow="activeFlow"></flow-browser>
   <flow-node-editor flow-node="activeFlow.selectedFlowNode"></flow-node-editor>
   <flow-node-setup  node-type="activeFlow.selectedFlowNode"></flow-node-setup>
