fix copying shared template link going to connect. closes #53

--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -9,7 +9,7 @@
                 </a>
             </div>
 
-            <md-button ui-sref="material.nodewizard.addnode" md-theme="octo-blue" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" >
+            <md-button md-theme="octo-blue" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" >
                 <md-tooltip>Copy to Clipboard</md-tooltip>
                 <i class="fa fa-share-alt"></i>
                 Copy Link
