Notification service implemented! We even use it in two (2) pages.

--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -52,6 +52,6 @@
       </a>
     </md-content>
   </md-sidenav>
-
+  <div class='toast-container' flex layout="row" layout-align="center center"></div>
   <ui-view layout="column" layout-fill></ui-view>
 </div>
