--- a/public/pages/process.html
+++ b/public/pages/process.html
@@ -19,11 +19,12 @@
          <md-button flex>Uptime</md-button>
          <md-button flex>Actions</md-button>
       </md-toolbar>
-      <div class="process-row" ng-repeat="node in processNodes" flex >
-        <span flex>{{node.name || node.uuid}}</span>
-        <span flex>{{node.sentMessageCount}}</span>
-        <span flex>{{node.receivedMessageCount}}</span>
-        <span flex>{{node.uptime}}</span>
+      <div class="process-row" ng-repeat="node in processNodes | orderBy: sortProcesses" flex layout="row" >
+        <div flex layout="row" layout-align="start">{{node.name || node.uuid}}</div>
+        <div flex layout="row" layout-align="center">{{node.messagesSent}}</div>
+        <div flex layout="row" layout-align="center">{{node.messagesReceived}}</div>
+        <div flex layout="row" layout-align="center">{{getUptime(node.onlineSince)}}</div>
+        <div flex layout="row" layout-align="center">{{node.actions}}</div>
       </div>
     </md-content>
   </div>
