--- a/public/pages/process.html
+++ b/public/pages/process.html
@@ -13,18 +13,21 @@
   <div flex="66" flex-phone="95" flex-tablet="95" layout-fill layout="column" class="md-whiteframe-z2">
     <md-content flex layout-fill>
       <md-toolbar md-default-theme layout="row" flex>
-         <md-button flex="30" ng-click="setSortProcess('name')">Name</md-button>
+         <md-button flex="35" ng-click="setSortProcess('name')">Name</md-button>
          <md-button flex="15" ng-click="setSortProcess('messagesSent')">Sent</md-button>
          <md-button flex="15" ng-click="setSortProcess('messagesReceived')">Received</md-button>
          <md-button flex="15" ng-click="setSortProcess('onlineSince')">Uptime</md-button>
-         <md-button flex="25" ng-click="setSortProcess('online')">Actions</md-button>
+         <md-button flex="20" ng-click="setSortProcess('online')">Actions</md-button>
       </md-toolbar>
       <div class="process-row" ng-repeat="node in processNodes | orderBy: sortProcesses" flex layout="row" >
-        <div flex="30" layout="row" layout-align="start">{{node.name || node.uuid}}</div>
-        <div flex="15" layout="row" layout-align="center">{{node.messagesSent}}</div>
-        <div flex="15" layout="row" layout-align="center">{{node.messagesReceived}}</div>
+        <div flex="35" layout="row" layout-align="start">
+          <div class="process-row-logo" ng-style="{'background-image': 'url(' + node.logo + ')'}"></div>
+          {{node.name || node.uuid}}
+        </div>
+        <div flex="15" layout="row" layout-align="center">{{node.totalMessagesSent}}</div>
+        <div flex="15" layout="row" layout-align="center">{{node.totalMessagesReceived}}</div>
         <div flex="15" layout="row" layout-align="center">{{getUptime(node.onlineSince)}}</div>
-        <div flex="25" layout="row" layout-align="center">{{node.actions}}</div>
+        <div flex="20" layout="row" layout-align="center">{{node.actions}}</div>
       </div>
     </md-content>
   </div>
