--- a/public/pages/process.html
+++ b/public/pages/process.html
@@ -8,7 +8,6 @@
     </div>
   </h2>
 </md-toolbar>
-{{processNodes.length}}
 <div flex layout-fill layout="row" layout-align="center">
   <div flex="66" flex-phone="95" flex-tablet="95" layout-fill layout="column" class="md-whiteframe-z2">
     <md-content flex layout-fill>
@@ -28,7 +27,7 @@
         <md-item ng-repeat="node in processNodes | orderBy: sortProcesses:!sortAscending">
           <md-item-content>
             <div class="md-tile-left">
-              <div class="process-row-logo" ng-style="{'background-image': 'url(' + node.logo + ')'}"></div>
+              <div class="process-row-logo" ng-style="{'background-image': 'url(' + node.logo + ')'}" ng-class="{faded: !node.online}"></div>
             </div>
             <div class="md-tile-content" layout="row">
               <div flex="35" layout="row" layout-align="start">
@@ -42,13 +41,13 @@
                 <div sparkline-graph ng-model="node.messagesReceivedOverTime"></div>&nbsp;
                 {{node.totalMessagesReceived}}
               </div>
-              <div flex="15" layout="row" layout-align="center">{{getUptime(node.online, node.onlineSince)}}</div>
+              <div flex="15" layout="row" layout-align="center">{{getUptime(node.online, node.onlineSince) || '----------'}}</div>
               <div flex="20" layout="row" layout-align="center">{{node.actions}}
-                <md-button ng-click="stopProcess(node.uuid)" class="stop-button" ng-class="{ 'btn-stopped': !node.online}">
+                <md-button ng-click="stopProcess(node.uuid)" class="btn-stopped" ng-class="{ 'btn-stopped': !node.online}">
                   <i class="fa fa-stop"></i>
                 </md-button>
 
-                <md-button ng-click="startProcess(node.uuid)" class="start-button" ng-class="{ 'btn-playing': node.online }">
+                <md-button ng-click="startProcess(node.uuid)" class="btn-playing" ng-class="{ 'btn-playing': node.online }">
                   <i class="fa fa-play"></i>
                 </md-button>
               </div>
