Change to smooooothie chart on process page. No more ARIA warnings

--- a/public/pages/connector/devices/detail/index.html
+++ b/public/pages/connector/devices/detail/index.html
@@ -7,13 +7,13 @@
       </a>
     </div>
 
-    <md-button ng-click="resetToken(device)" md-theme="octo-blue">
+    <md-button ng-click="resetToken(device)" md-theme="octo-blue" aria-label="Reset Token">
       <md-tooltip>Reset Token</md-tooltip>
       <i class="fa fa-key"></i>
       Reset Token
     </md-button>
 
-    <md-button ng-click="deleteDevice(device)" md-theme="octo-blue">
+    <md-button ng-click="deleteDevice(device)" md-theme="octo-blue" aria-label="Delete Device">
       <md-tooltip>Delete Device</md-tooltip>
       <i class="fa fa-trash"></i>
       Delete
