--- a/public/pages/connector/nodes/index.html
+++ b/public/pages/connector/nodes/index.html
@@ -7,7 +7,7 @@
       </a>
     </div>
 
-    <md-button ui-sref="material.nodewizard.addnode" md-theme="octo-blue">
+    <md-button ui-sref="material.nodewizard.addnode" md-theme="octo-blue" aria-label="Add New Node">
       <md-tooltip>Add New Node</md-tooltip>
       <i class="fa fa-plus"></i>
       Add Node
