--- a/public/pages/flow-node-setup.html
+++ b/public/pages/flow-node-setup.html
@@ -3,7 +3,7 @@
     <div class="md-toolbar-tools">
       <h2><span>Setup Node</span></h2>
       <span flex></span>
-      <md-button ng-click="close()">Close</md-button>
+      <md-button ng-click="close()" aria-label="Close">Close</md-button>
     </div>
   </md-toolbar>
 
