--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -6,7 +6,7 @@
       </a>
     </md-toolbar>
 
-    <md-button class="md-fab md-primary" ng-click="closeNav()">
+    <md-button class="md-fab md-primary" ng-click="closeNav()" aria-label="Close Nav">
       <i class="fa fa-bars fa-2x"></i>
     </md-button>
 
