--- a/public/pages/node_forms/compose_form.html
+++ b/public/pages/node_forms/compose_form.html
@@ -16,4 +16,4 @@
     </md-item-content>
   </md-item>
 </md-list>
-<md-button ng-click="flowNode.composeKeys.push('')" class="md-primary">Add Key</md-button>
+<md-button ng-click="flowNode.composeKeys.push('')" class="md-primary" aria-label="Add Key">Add Key</md-button>
