--- a/public/pages/flow-import.html
+++ b/public/pages/flow-import.html
@@ -12,7 +12,7 @@
   <div flex layout="column">
     <flow-editor flow="template.flow" readonly="true"></flow-editor>
 
-    <md-button class="md-fab md-primary"  style="position:fixed; bottom: 260px; right: 28px" ng-click="import()" title="Import" ng-class="{importing: importing}">
+    <md-button class="md-fab md-primary"  style="position:fixed; bottom: 260px; right: 28px" ng-click="import()" title="Import" ng-class="{importing: importing}" aria-label="import">
       <i class="fa fa-cloud-download fa-2x"></i>
     </md-button>
 
