--- a/public/pages/process.html
+++ b/public/pages/process.html
@@ -13,18 +13,31 @@
     <md-content flex layout-fill>
       <total-activity-graph class="total-activity-graph" line-a="totalMessagesSentOverTime" line-b="totalMessagesReceivedOverTime"></total-activity-graph>
 
+      <div layout="row" layout-align="space-around center" style="margin: auto; min-height: 60px">
+          <form class="form" layout="row" layout-align="center">
+              <div class="form-group" flex="95" style="margin-bottom: 0">
+                  <div class="input-group">
+                      <input type="text" class="form-control" ng-model="processSearch" placeholder="Filter" autofocus>
+                      <span class="input-group-addon">
+                          <i class="fa fa-search"></i>
+                      </span>
+                  </div>
+              </div>
+          </form>
+      </div>
+
       <md-toolbar md-theme="octo-blue"  layout="row" flex>
          <div class="process-row-logo"></div>
          <div flex layout="row">
            <md-button flex="35" ng-click="setSortProcess('name')" aria-label="Sort by Name">Name</md-button>
-           <md-button flex="15" ng-click="setSortProcess('messagesSent')" aria-label="Sort by Message Sent">Sent</md-button>
-           <md-button flex="15" ng-click="setSortProcess('messagesReceived')" aria-label="Sort by Message Received">Received</md-button>
+           <md-button flex="15" ng-click="setSortProcess('totalMessagesSent')" aria-label="Sort by Message Sent">Sent</md-button>
+           <md-button flex="15" ng-click="setSortProcess('totalMessagesReceived')" aria-label="Sort by Message Received">Received</md-button>
            <md-button flex="15" ng-click="setSortProcess('onlineSince')" aria-label="Sort by Online Since">Uptime</md-button>
            <md-button flex="20" ng-click="setSortProcess('online')" aria-label="Sort by Online">Actions</md-button>
          </div>
       </md-toolbar>
        <md-list class="process-row">
-        <md-item ng-repeat="node in processNodes | orderBy: sortProcesses:!sortAscending">
+        <md-item ng-repeat="node in processNodes | orderBy: sortProcesses:!sortAscending | filter: processSearch">
           <md-item-content>
             <div class="md-tile-left">
               <div class="process-row-logo" ng-style="{'background-image': 'url(' + node.logo + ')'}" ng-class="{faded: !node.online}"></div>
