--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -11,14 +11,21 @@
 <div flex layout-fill layout="row" layout-align="center">
   <div flex="66" flex-phone="95" flex-tablet="95" layout-fill layout="column" class="md-whiteframe-z2">
     <md-content flex layout-fill>
-        <div class="graph-container" flex layout="row" layout-align="center">
-            <chart value="topicData" type="Pie"></chart>
-            <ul class="legend">
-                <li layout="row" ng-repeat="topic in topicData.data">
-                    <div class="legend-swatch" ng-style="{'background-color': topic.color}">&nbsp;</div> <span>{{topic.label}}</span>
-                </li>
-            </ul>
-        </div>
+        <md-card>
+            <md-toolbar>
+                <h2 class="md-toolbar-tools">Topics</h2>
+            </md-toolbar>
+            <md-card-content>
+                <div class="graph-container" flex layout="row" layout-align="center">
+                    <chart value="topicData" type="Pie"></chart>
+                    <ul class="legend">
+                        <li layout="row" ng-repeat="topic in topicData.data">
+                            <div class="legend-swatch" ng-style="{'background-color': topic.color}">&nbsp;</div> <span>{{topic.label}}</span>
+                        </li>
+                    </ul>
+                </div>
+            </md-card-content>
+        </md-card>
     </md-content>
   </div>
 </div>
