rename the analyze controller to analyze-controller.

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -10,7 +10,7 @@
 
 <md-content>
   <div flex layout-fill layout="row" layout-align="center">
-    <div flex="66" flex-tablet="95" flex-phone="95" class="md-whiteframe-z2">
+    <div flex-gt-md="66" flex-md="95" class="md-whiteframe-z2">
       <div flex layout="column">
         <div class="page-banner">
           <img src="/assets/images/home/banner.jpg" class="img-responsive">
