--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -18,7 +18,7 @@
 <br>
 
 <div flex layout-fill layout="row" layout-align="center" style="z-index: 3;">
-  <div flex="66" flex-phone="95" flex-tablet="95" layout-fill layout="column" class="md-whiteframe-z2" style="background: white; padding: 0 15px;">
+  <div flex-gt-md="66" flex-md="95" layout-fill layout="column" class="md-whiteframe-z2" style="background: white; padding: 0 15px;">
     <br>
 
     <div class="col-xs-12">
