--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -9,14 +9,14 @@
   </h2>
 </md-toolbar>
 <div flex layout-fill layout="row" layout-align="center">
-  <div flex="66" flex-phone="95" flex-tablet="95" layout-fill layout="column" class="md-whiteframe-z2">
+  <div flex-gt-md="66" flex-md="95" layout-fill layout="column" class="md-whiteframe-z2">
     <md-content flex layout-fill>
         <md-card>
             <md-toolbar>
                 <h2 class="md-toolbar-tools">Topics</h2>
             </md-toolbar>
             <md-card-content>
-                <div class="graph-container" flex layout="row" layout-align="center">
+                <div class="graph-container" flex layout-gt-md="row" layout-md="column" layout-align="center">
                     <chart value="topicData" type="Pie"></chart>
                     <ul class="legend">
                         <li layout="row" ng-repeat="topic in topicData.data">
