--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     <link href="/lib/fontawesome/css/font-awesome.css" rel="stylesheet" type="text/css"/>
     <link href="/lib/nvd3/nv.d3.css" rel="stylesheet"/>
     <link href="/lib/prism/themes/prism-coy.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="/lib/angular-chart.js/dist/angular-chart.css">
     <link rel="stylesheet" href="/lib/angular-material/angular-material.css">
     <link rel="stylesheet" href="/assets/stylesheets/octo-blue-theme.css">
 
