change get help link

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -117,7 +117,7 @@
                   <br>
                   <a href="http://hackster.io/octoblu">Tutorials</a>
                   <br>
-                  <a href="https://www.flowdock.com/invitations/026e3ca74a93054cc63a6993fcf9a5e4a3cc1b7f">Get Help</a>
+                  <a href="https://gitter.im/octoblu/chat">Get Help</a>
                   <br>
                   <a href="http://status.octoblu.com">Status</a>
                 </p>
